fix: name background not showing if no name and kick icon overlapping with ready icon

--- a/src/components/playerCard/styles.module.scss
+++ b/src/components/playerCard/styles.module.scss
@@ -32,13 +32,12 @@
   .kickIcon {
     font-size: vars.$icon-size-small;
     position: absolute;
-    top: calc(vars.$spacing-secondary * -1);
-    right: calc(vars.$spacing-secondary * -1);
-    background-color: vars.$color-surface2;
+    left: 2px;
+    top: 2px;
+    padding: 2px;
+    background-color: vars.$color-background-translucent-light;
     border-radius: vars.$roundness;
-    padding: vars.$spacing-tertiary;
     aspect-ratio: 1;
-    // border: 1px solid vars.$color-surface;
   }
 
   .waitingIcon {
